--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html><html dir="ltr" lang="en"><head> <!-- Google Tag Manager --> <link rel="modulepreload" href="/build/p-01c274c5.js"><link rel="modulepreload" href="/build/p-82b94935.entry.js"><link rel="modulepreload" href="/build/p-8a5e5d61.js"><link rel="modulepreload" href="/build/p-a1dcaba2.js"><link rel="modulepreload" href="/build/p-f3712d3c.js"><script>(function (w, d, s, l, i) {
+<!doctype html><html dir="ltr" lang="en"><head><style>.loginbutton--google{ display: none !important;} .or{display: none;}</style> <!-- Google Tag Manager --> <link rel="modulepreload" href="/build/p-01c274c5.js"><link rel="modulepreload" href="/build/p-82b94935.entry.js"><link rel="modulepreload" href="/build/p-8a5e5d61.js"><link rel="modulepreload" href="/build/p-a1dcaba2.js"><link rel="modulepreload" href="/build/p-f3712d3c.js"><script>(function (w, d, s, l, i) {
       w[l] = w[l] || []; w[l].push({
         'gtm.start':
           new Date().getTime(), event: 'gtm.js'
